added tailwind to docs

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -12,6 +12,8 @@ gem "tzinfo-data", platforms: %i[ windows jruby ]
 gem "bootsnap", require: false
 gem "relay_ui", path: "../../relay_ui"
 gem "phlex-rails"
+gem "tailwindcss-ruby"
+gem "tailwindcss-rails"
 
 group :development, :test do
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
