--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -14,6 +14,7 @@ gem "relay_ui", path: "../../relay_ui"
 gem "phlex-rails"
 gem "tailwindcss-ruby"
 gem "tailwindcss-rails"
+gem "tabler_icons_ruby"
 
 group :development, :test do
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
