--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
+    "@relay_ui/slideout": "^0.1.0",
     "highlight.js": "^11.11.1"
   }
 }
