--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "esbuild": "^0.25.0"
   },
   "scripts": {
-    "build:js": "esbuild app/assets/javascripts/relay_ui/index.js --bundle --outfile=vendor/javascript/relay_ui/dist/relay_ui.js",
-    "build:css": "npx @tailwindcss/cli -i ./app/assets/stylesheets/relay_ui/application.css -o ./vendor/assets/stylesheets/relay_ui/relay_ui.css",
-    "watch:js": "esbuild app/assets/javascripts/relay_ui/index.js --bundle --outfile=vendor/javascript/relay_ui/dist/relay_ui.js --watch",
-    "watch:css": "npx @tailwindcss/cli -i ./app/assets/stylesheets/relay_ui/application.css -o ./vendor/assets/stylesheets/relay_ui/relay_ui.css --watch"
+    "watch": "npx @tailwindcss/cli -i ./app/assets/stylesheets/application.css -o ./dist/relay_ui/relay_ui.css --watch"
   }
 }
