--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,11 @@ jobs:
           ruby-version: ruby-3.4.2
           bundler-cache: true
 
-      - name: Lint code for consistent style
-        run: bin/rubocop -f github
+      - name: Lint gem
+        run: bundle exec rubocop -f github
+      - name: Lint docs
+        working-directory: docs
+        run: bundle exec rubocop -f github
 
   test:
     runs-on: ubuntu-latest
