--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Set up Ruby
+        working-directory: docs
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ruby-3.4.2
