--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          # bundler-cache: true
+          bundler-cache: true
           working-directory: docs
       - name: Bundle install
         run: bundle install
