--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -10,7 +10,7 @@ gem "stimulus-rails"
 gem "jbuilder"
 gem "tzinfo-data", platforms: %i[ windows jruby ]
 gem "bootsnap", require: false
-gem "relay_ui", git: "git://github.com/relay-rb/relay-ui.git", branch: "tailwind"
+gem "relay_ui", git: "git://github.com/relay-rb/relay-ui.git", branch: "0.3.0"
 gem "phlex-rails"
 gem "tailwindcss-ruby"
 gem "tailwindcss-rails"
