--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
-    "@relay_ui/slideout": "^0.2.0"
+    "@relay_ui/flash": "^0.3.0",
+    "@relay_ui/navigation": "^0.3.0",
+    "@relay_ui/slideout": "^0.3.0"
   }
 }
