--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -2,7 +2,7 @@ source "https://rubygems.org"
 
 gem "rails", "~> 8.0.1"
 gem "propshaft"
-gem "sqlite3", ">= 2.1"
+gem "pg"
 gem "puma", ">= 5.0"
 gem "jsbundling-rails"
 gem "turbo-rails"
@@ -15,6 +15,7 @@ gem "phlex-rails"
 gem "tailwindcss-ruby"
 gem "tailwindcss-rails"
 gem "faker"
+gem "pagy"
 
 group :development, :test do
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
