--- a/docs/.github/workflows/ci.yml
+++ b/docs/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: .ruby-version
-          bundler-cache: true
+          # bundler-cache: true
 
       - name: Scan for common Rails security vulnerabilities using static analysis
         run: bin/brakeman --no-pager
@@ -32,7 +32,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: .ruby-version
-          bundler-cache: true
+          # bundler-cache: true
 
       - name: Lint code for consistent style
         run: bin/rubocop -f github
