--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -11,7 +11,7 @@ gem "jbuilder"
 gem "tzinfo-data", platforms: %i[ windows jruby ]
 gem "bootsnap", require: false
 # gem "relay_ui", git: "git@github.com:logicrelay/relay_ui.git", branch: "0.4.0"
-gem "relay_ui", path: "../"
+gem "relay_ui"
 gem "phlex-rails"
 gem "tailwindcss-ruby"
 gem "tailwindcss-rails"
